# Multi_Comparison_Matrix

./: .gitignore  MANIFEST.in  README.md  analysis.json  heatline_horizontal.tex  heatmap.csv  main.py  pyproject.toml  results.csv  results_example.csv
.github/workflows/: publish.yml  pytest.yml
ALTAMCBE/: ALTAMCBE.py  utils.py
MCM/: MCM.py  utils.py
multi_comp_matrix/: MCM.py  utils.py
multi_comp_matrix/tests/: test_mcm.py
