[build-system]
requires = ["setuptools>61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_comp_matrix"
version = "0.0.3"
description = "  Multi Comparison Matrix: A long term approach to benchmark evaluations  "
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "Ali Ismail-Fawaz", email = "ali-el-hadi.ismail-fawaz@uha.fr"},
    {name = "Angus Dempster", email = "Angus.Dempster1@monash.edu"},
    {name = "Chang Wei Tan", email = "Chang.Tan@monash.edu"},
    {name = "Matthieu Herrmann", email = "matthieu.herrmann@monash.edu"},
    {name = "Lynn Miller", email = "lynn.miller1@monash.edu"},
    {name = "Daniel F. Schmidt", email = "Daniel.Schmidt@monash.edu"},
    {name = "Stefano Berretti", email = "stefano.berretti@unifi.it"},
    {name = "Jonathan Weber", email = "jonathan.weber@uha.fr"},
    {name = "Maxime Devanne", email = "maxime.devanne@uha.fr"},
    {name = "Germain Forestier", email = "germain.forestier@uha.fr"},
    {name = "Geoffrey I. Webb", email = "geoff.webb@monash.edu"}
]
maintainers = [
    {name = "Ali Ismail-Fawaz", email = "ali-el-hadi.ismail-fawaz@uha.fr"},
    {name = "Angus Dempster", email = "Angus.Dempster1@monash.edu"},
    {name = "Chang Wei Tan", email = "Chang.Tan@monash.edu"}
]
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}

keywords = [
    "data-science",
    "machine-learning",
    "data-mining",
    "time-series",
    "time-series-analysis",
    "time-series-classification",
    "time-series-regression",
    "time-series-machine-learning",
    "benchmarking",
    "benchmarking-machine-learning"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy==1.24.4",
    "pandas==2.0.3",
    "matplotlib==3.7.4",
    "scipy==1.10.0",
    "baycomp==1.0",
    "tqdm==4.66.1"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-rerunfailures",
    "pre-commit"
]

[tool.setuptools]
packages = ["multi_comp_matrix"]

[tool.setuptools.package-data]
multi_comp_matrix = [
    "*.png",
    "*.csv",
    "*.pdf",
    "*.tex",
]
